# afwerx-datathon

./: .flake8  404.html  CONTRIBUTING.md  README.md  data_quality_review.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  pages.yaml  release.yaml  test.yaml
examples/: __init__.py
examples/afwerx/: assembleFeatureMatrix.py  plotData.py  trainModel.py
scripts/: build_docs.py
search/: search_index.json
src/afwerx_datathon/: __init__.py  __main__.py
src/afwerx_datathon/data_utils/: __init__.py  pd_df.py
src/afwerx_datathon/io/: __init__.py  csv.py  damaged_dev_data.yaml  datasets.py  factory.py  parquet.py  path.py  types.py
src/afwerx_datathon/learning/: __init__.py
src/afwerx_datathon/learning/supervised/: __init__.py  random_forest.py
src/afwerx_datathon/preprocessing/: __init__.py  wt.py
src/afwerx_datathon/signal/: __init__.py  metrics.py  wavelet.py
src/developer/: index.html
src/reference/: index.html
src/user/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
