[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=1.0.0",]

[tool.black]
line-length = 80

[tool.poetry]
authors = [ "James Mullinix <jmullinix@goraft.tech>",]
description = "Data science pipelines for the AFWERX Datathon, 2021."
documentation = "https://mullinix.github.io/afwerx-datathon"
homepage = "https://github.com/mullinix/afwerx-datathon"
keywords = []
name = "afwerx-datathon"
readme = "README.md"
version = "0.1.0"

[tool.coverage.report]
exclude_lines = [ "if sys.version_info.*", "pragma: no cover", "raise NotImplementedError",]
fail_under = 100
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = [ "afwerx_datathon",]

[tool.poetry.dependencies]
kedro = "^0.17.5"
pandas = "^1.3.3"
python = ">=3.7.1,<3.9"
rich = "10.7.0"
typer = "^0.3.2"
typing-extensions = "^3.10.0.0"
scipy = "^1.7.1"
sklearn = "^0.0"
pyarrow = "^5.0.0"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
seaborn = "^0.11.2"
PyWavelets = "^1.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mccabe = "^0.6.1"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.4"
mkdocstrings = "^0.15.2"
mypy = "^0.910"
pdbpp = "^0.10.3"
py-spy = "^0.3.8"
pymdown-extensions = "^8.2.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
toml = "^0.10.2"
tox = "^3.24.1"
typer-cli = "^0.0.12"

[tool.poetry.scripts]
afwerx-datathon = "afwerx_datathon.__main__:app"

[tool.pytest.ini_options]
addopts = "-sv"
markers = [ "functional: mark as functional test.", "integration: mark as integration test.", "unit: mark as unit test.",]
python_classes = "Test*"
python_files = [ "__init__.py", "test_*.py",]
python_functions = [ "test_*",]
testpaths = [ "tests",]

[tool.poetry.dev-dependencies.coverage]
extras = [ "toml",]
version = "^5.5.0"
